bat.bool1.posneg.PosNeg.scala.error
Compilation error:
PosNeg:15: error: ';' expected but 'return' found.
    } return false
      ^